showing background behined popup on small screens was fixed

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -84,11 +84,7 @@
     margin-top: 110px;
 
     @media(max-width: 1200px){
-      margin-top: 90px;
-    }
-
-    @media(max-width: 360px){
-      margin-top: 60px;
+      margin-top: 0;
     }
   }
   
